# dal

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: cmake.yml
cmake/: DalPolicy.cmake  DalToolchains.cmake  FindCompiler.cmake  FindLLVM.cmake  Findllvm.cmake
cmake/templates/: config.h.in
comp/: Cargo.toml  rustfmt.toml
comp/src/: lib.rs  main.rs
comp/src/cli/: mod.rs
comp/src/lexer/: mod.rs  token.rs
comp/src/span/: mod.rs
example/: hello.dal  hello_native.dal  main.dal  math.dal  simple_math.dal
include/cli/: arg.hh  cli_app.hh  cmd.hh  ctx.hh
include/core/: analyze.hh  ast.hh  codegen.hh  error.hh  llvm.hh  os.hh  parser.hh  span.hh  table_entry.hh  token.hh  tokenizer.hh  visitor.hh
include/fmt/: core.hh  format.hh
libanalyzer/: Analyzer.cpp  Analyzer.hpp  CMakeLists.txt
libast/: Ast.cpp  Ast.hpp  CMakeLists.txt
libcli/: Argument.cpp  Argument.hpp  CLI.cpp  CLI.hpp  CMakeLists.txt  Command.cpp  Command.hpp  Context.cpp  Context.hpp
libcodegen/: CMakeLists.txt  Codegen.cpp  Codegen.hpp
liblexer/: CMakeLists.txt  Cursor.cpp  Cursor.hpp  Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
libos/: CMakeLists.txt  OS.cpp  OS.hpp
libparser/: Binop.cpp  Block.cpp  CMakeLists.txt  Expr.cpp  Function.cpp  Literals.cpp  Parser.cpp  Parser.hpp  utils.cpp
libspan/: CMakeLists.txt  Error.cpp  Error.hpp  Span.hpp
libutils/: CMakeLists.txt  Fmt.hpp  Os.cpp  Os.hpp  Utils.cpp  Utils.hpp
llvm_wrapper/: target.c
markdown/: contributing.md  doc.md  security.md
src/: CMakeLists.txt  Cargo.toml  ast.cc  ast.hh  ast.rs  codegen.rs  compiler.rs  dal_pointer.rs  err_msg.rs  fmt_impl.cc  lexer.rs  lib.rs  main.cc  main.cpp  main.rs  parser.rs  rustfmt.toml
src/ast/: Cargo.toml
src/ast/src/: ast.rs  lib.rs  ptr.rs  visit.rs
src/cli/: app.cc  arg.cc  arg.hh  cli.cc  cli.hh  cmd.cc  cmd.hh  ctx.cc  ctx.hh
src/codegen/: analyze.rs  dal_llvm.rs  llvm.rs  mod.rs
src/codegen/llvm/: core.rs  debuginfo.rs  target.rs  target_machine.rs
src/compiler/: ast.rs  parser.rs  tokenizer.rs
src/core/: analyze.cc  ast.cc  block_parser.cc  codegen.cc  error.cc  expr_parser.cc  function_parser.cc  llvm.cc  os.cc  parser.cc  span.cc  table_entry.cc  token.cc  tokenizer.cc  visitor.cc
src/fmt/: core.cc
src/lexer/: Cargo.toml
src/lexer/src/: display.rs  lib.rs  tests.rs  tokenizer.rs
src/parser/: Cargo.toml
src/parser/src/: bin_op_parser.rs  block_parser.rs  dummy.rs  error.rs  expr_parser.rs  function_parser.rs  item_parser.rs  lib.rs  literal_parser.rs  parser.rs  tests.rs  type_parser.rs
src/utils/: fmt.cc  fmt.hh  os.cc  os.hh  span.hh  utils.cc  utils.hh
std/: bootstrap.dal  rt.dal  std.dal
tests/: CMakeLists.txt  lexer.rs  parser.rs  test_fmt.cc  test_parser.cc  test_tokenizer.cc
